# pycquant

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
docs/: Makefile  conf.py  example.ipynb  make.bat
src/pycquant/: MT5Strategies BACKUP.py  MT5Strategies.py  MT5datahandling.py  __init__.py  datahandling.py  pycquant.py  test_MT5datahandling.py  test_MT5datahandling_2.py  test_pycquant_1.py  test_pycquant_2.py  test_pycquant_3.py  test_pycquant_4.py  test_pycquant_5.py
src/pycquant/MT5utils/: MT5functions.py  __init__.py
src/pycquant/utils/: __init__.py  functions.py
tests/: test_MT5Strategies.py  test_MT5datahandling.py  test_MT5datahandling_2.py  test_pycquant.py  test_pycquant_1.py  test_pycquant_2.py  test_pycquant_3.py  test_pycquant_4.py  test_pycquant_5.py  test_pycquant_6.py  test_pycquant_7.py  test_pycquant_8.py  test_pycquant_9.py  test_pycquant_9c.py  test_pycquant_mj.py
