[tool.poetry]
name = "pycquant"
version = "0.1.0"
description = "Quantitative analysis of candle data!"
authors = ["William Bonfim"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
